force-app/main/default/objects/MKP_Helper__c/fields/Minimum_Wages_Col__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Wages_Col__c</fullName>
    <label>Minimum Wages Col</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>