force-app/main/default/objects/MKP_Helper__c/fields/Verified_LD_found_due__c.field-meta.xml
<CustomField>
    <fullName>Verified_LD_found_due__c</fullName>
    <label>Verified LD found due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>